Little cosmetic changes

--- a/index.html
+++ b/index.html
@@ -6,13 +6,13 @@
     <link rel="stylesheet" href="./main.css">
   </head>
   <body>
-    <header>
+    <header id="Home">
       <div class="top-links">
-        <a href="#" class="top-link active">Home</a>
-        <a href="#" class="top-link">About me</a>
-        <a href="#" class="top-link">Skills</a>
-        <a href="#" class="top-link">Portfolio</a>
-        <a href="#" class="top-link">Contacts</a>
+        <a href="#Home" class="top-link active">Home</a>
+        <a href="#About_me" class="top-link">About me</a>
+        <a href="#Skills" class="top-link">Skills</a>
+        <a href="#Portfolio" class="top-link">Portfolio</a>
+        <a href="#Contacts" class="top-link">Contacts</a>
       </div>
       <hr>
     </header>
@@ -20,18 +20,18 @@
       <div class="first-info">
         <span class="little-info">Denis<br>Novic</span>
         <span class="little-info">UX | UI designer 24 years old, Minsk</span>
-        <span class="little-info ru-eng">RU | ENG</span>
+        <span class="little-info ru-eng"><span style="color:#828282">RU</span> | ENG</span>
         <img src="./img/BSPP2266.png" alt="My photo">
       </div>
       <div class="back">
-        <div class="second-info">
+        <div class="second-info" id="About_me">
           <span class="about-me">About me</span>
           <span class="about-me">Hi, I'm Denis – UX/UI designer from Minsk.<br>I'm interested in design and everything connected with it.</span>
           <span class="about-me">I'm studying at courses "Web and mobile design<br>interfaces" in IT-Academy.</span>
           <span class="about-me">Ready to implement excellent projects<br>with wonderful people.</span>
         </div>
       </div>
-      <div class="third-info">
+      <div class="third-info" id="Skills">
         <span class="skills">Skills</span>
         <span class="skills">I work in such programs as</span>
         <div class="icons">
@@ -41,7 +41,7 @@
               <img src="./img/Group 7 (1).png" alt="Fig">
         </div>
       </div>
-      <div class="back">
+      <div class="back" id="Portfolio">
         <div class="fourth-info">
           <span class="portfolio">Portfolio</span>
           <div class="portfolio-block">
@@ -60,7 +60,7 @@
       </div>
     </content>
     <footer>
-      <div class="contacts">
+      <div class="contacts" id="Contacts">
         <span class="cont">Contacts</span>
         <span class="cont">Want to know more or just chat?<br>You are welcome!</span>
         <a href="#" class="button">Send message</a>
